@@ -23,15 +23,15 @@ is (Gtk2->check_version(0,0,0), 'Gtk+ version too new (major mismatch)',
     'check_version pass');
 is (Gtk2->check_version(50,0,0), 'Gtk+ version too old (major mismatch)',
     'check_version fail');
-ok (Gtk2::major_version, 'major_version');
-ok (Gtk2::minor_version, 'minor_version');
-ok (Gtk2::micro_version, 'micro_version');
+ok (defined (Gtk2::major_version), 'major_version');
+ok (defined (Gtk2::minor_version), 'minor_version');
+ok (defined (Gtk2::micro_version), 'micro_version');
 
 ok (Gtk2->CHECK_VERSION(0,0,0), 'CHECK_VERSION pass');
 ok (!Gtk2->CHECK_VERSION(50,0,0), 'CHECK_VERSION fail');
-ok (Gtk2::MAJOR_VERSION, 'MAJOR_VERSION');
-ok (Gtk2::MINOR_VERSION, 'MINOR_VERSION');
-ok (Gtk2::MICRO_VERSION, 'MICRO_VERSION');
+ok (defined (Gtk2::MAJOR_VERSION), 'MAJOR_VERSION');
+ok (defined (Gtk2::MINOR_VERSION), 'MINOR_VERSION');
+ok (defined (Gtk2::MICRO_VERSION), 'MICRO_VERSION');
 
 SKIP:
 {
